Change around radosgw cookbook to use new attrs
Change-Id: I5796b65c1fa7a8811c0e22a25b5065456b5e32e2
Reviewed-on: https://git.newdream.net/3222
Reviewed-by: Carl Perry <carl.perry@dreamhost.com>
Tested-by: Carl Perry <carl.perry@dreamhost.com>

--- a/templates/default/apache-pin.erb
+++ b/templates/default/apache-pin.erb
@@ -1,3 +1,3 @@
 Package: <%= @package %>
-Pin: version <%= node[:ceph][:apache2_version] %>
+Pin: version <%= node[:dreamobjects][:api_apache_version] %>
 Pin-Priority: 1001
