--- a/templates/default/apache-pin.erb
+++ b/templates/default/apache-pin.erb
@@ -1,3 +1,3 @@
 Package: <%= @package %>
-Pin: version <%= node[:dreamobjects][:api_apache_version] %>
+Pin: version <%= node[:ceph][:apache2_version] %>
 Pin-Priority: 1001
