--- a/templates/default/fastcgi-pin.erb
+++ b/templates/default/fastcgi-pin.erb
@@ -1,3 +1,3 @@
 Package: <%= @package %>
-Pin: version <%= node[:dreamobjects][:api_fastcgi_version] %>
+Pin: version <%= node[:ceph][:fastcgi_version] %>
 Pin-Priority: 1001
