--- a/templates/default/rgw.conf.erb
+++ b/templates/default/rgw.conf.erb
@@ -4,8 +4,8 @@ LogFormat "%{X-Forwarded-For}i %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-A
 LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" proxy_debug
 
 <VirtualHost <%= @listen_addr %>:80>
-  ServerName <%= node[:dreamobjects][:api_url] %>
-  ServerAdmin <%= node[:dreamobjects][:api_admin_email] %>
+  ServerName <%= node[:ceph][:api_fqdn] %>
+  ServerAdmin <%= node[:ceph][:admin_email] %>
   DocumentRoot /var/www/
 
   RewriteEngine On
@@ -21,14 +21,14 @@ LogFormat "%{X-Forwarded-For}i %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{Use
     </Directory>
   </IfModule>
 
-  SetEnv RGW_DNS_NAME "<%= node[:dreamobjects][:api_url] %>"
+  SetEnv RGW_DNS_NAME "<%= node[:ceph][:api_fqdn] %>"
   SetEnv RGW_LOG_LEVEL 20
   SetEnv RGW_PRINT_CONTINUE "yes"
-  SetEnv RGW_OPENSTACK_URL "http://<%= node[:dreamobjects][:api_url] %>"
+  SetEnv RGW_OPENSTACK_URL "http://<%= node[:ceph][:api_fqdn] %>"
   SetEnv RGW_OPENSTACK_URL_PREFIX "swift"
   SetEnv RGW_REMOTE_ADDR_PARAM "X-Forwarded-For"
 
-  SetEnv CEPH_ARGS "-n client.rgw-<%= node[:hostname] %>"
+  SetEnv CEPH_ARGS "-n client.radosgw-<%= node[:hostname] %>"
   SetEnv RGW_SHOULD_LOG "yes"
 
   AllowEncodedSlashes On
