Correct destroy OSD method to work as intended. 94327693rd pass at automated MON expansion (needs testing). Correct broken defaults for log and socket paths.
Change-Id: I7aece74fc7326981b9420edf3eef43224a27eeb5
Reviewed-on: https://git.newdream.net/5451
Reviewed-by: Carl Perry <carl.perry@dreamhost.com>
Tested-by: Carl Perry <carl.perry@dreamhost.com>

--- a/templates/default/ceph.conf.erb
+++ b/templates/default/ceph.conf.erb
@@ -42,6 +42,7 @@
         osd data = /srv/ceph/osd/$id
 	filestore flusher = false
         max open files = 4096
+        admin socket = /var/run/ceph/ceph-$name.asok
 <% if (! node["ceph"]["debug"].nil?) then -%>
 <%   if (! node["ceph"]["debug"]["osd"].nil?) then -%>
         debug osd = <%= node["ceph"]["debug"]["osd"] %>
