Add runit, add FDE, cleanups Add full disk encryption to ceph cookbooks using dmcrypt * Will install cryptsetup if not already installed * Encryption method hardcoded for now * Off by default; can be turned on per osd, host, or environment Replace startup scripts with runit * Ceph init/upstart scripts are no longer used * Ceph service is disabled * Each monitor and OSD creates it's own runit service Modifications to ip_location: * Move networks from node['ceph_networks'] to node['ceph']['networks'] * Support multiple netblocks per network * Cluster network now optional * Some cases default to the IPv4_ANY address (0.0.0.0) instead of bombing * IPv6 addresses are now returned wrapped in square brackets * Removed unused function get_if_for_net * Changed function name get_if_ip_for_net to get_cephnet_ip Initial Cluster Creation: * Both example CRUSH maps are installed * User now has to choose host or rack CRUSH map during inital cluster setup * osd_bootstrap key fixed so ceph crush set works again Configuration cleanup: * Port number for MON added to ceph.conf which prevents error messages at startup * Cluster IP address for OSD now optional

--- a/templates/default/ceph.conf.erb
+++ b/templates/default/ceph.conf.erb
@@ -12,8 +12,8 @@
 
 <% @monitors.each do |monitor, address| -%>
 [mon.<%= monitor %>]
-  host = <%= monitor %>
-  mon addr = [<%= address %>]:6789
+	host = <%= monitor %>
+	mon addr = <%= address %>:6789
 
 <% end -%>
 
@@ -36,9 +36,11 @@
 
 <% @osd_devices.each do |osd_device| -%>
 [osd.<%= osd_device['osd_id'] %>]
-  host = <%= node[:hostname] %>
-  public addr = <%= @public_ip %>
-  cluster addr = <%= @cluster_ip %>
+	host = <%= node[:hostname] %>
+	public addr = <%= @public_ip %>
+<%   if not @cluser_ip == "0.0.0.0" then -%>
+	cluster addr = <%= @cluster_ip %>
+<%   end # cluster IP check -%>
 
 <% end -%>
 
