Rever ip_location
rever ip_location and add a cluster network directive to ceph.conf

--- a/templates/default/ceph.conf.erb
+++ b/templates/default/ceph.conf.erb
@@ -3,7 +3,7 @@
   mon initial members = <%= node["ceph"]["mon_initial_members"] %>
   mon host = <%= @mon_host %>
   public network = <%= node["ceph"]["networks"]["public"] %>
-  cluster network = <%= node["ceph"]["networks"]["cluster_network"] %>
+  cluster network = <%= node["ceph"]["networks"]["cluster"] %>
 <% node["ceph"]["config"]["global"].each do |key, value| -%>
   <%= key %> = <%= value %>
 <% end -%>
