Add equals to template to fix crushmapping
Add equals to ceph.conf template to fix automatic crush map placement.

--- a/templates/default/ceph.conf.erb
+++ b/templates/default/ceph.conf.erb
@@ -21,7 +21,7 @@
 <% end -%>
 
 [osd]
-  osd crush location rack=<%= node['rack'] -%> row=<%= node['row'] %>
+  osd crush location = rack=<%= node['rack'] -%> row=<%= node['row'] %>
 <% node["ceph"]["config"]["osd"].each do |key, value| -%>
   <%= key %> = <%= value %>
 <% end -%>
